Changed the layout to fix a bug on footer display

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 
 
             </div>
-            <div id="grid"></div>
+            <div id="grid">
+                <div id="gridtop"></div>
+                <div id="gridplacement"></div>
+                <div id="gridbottom"></div>
+            </div>
             <div id="right">
                 <div id="tools">
                     <div id="boxbrush">
